** Added more memory to failsafe maven plugin